--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-dom": "18.1.0"
   },
   "devDependencies": {
+    "@next/bundle-analyzer": "^12.1.6",
     "@types/node": "17.0.35",
     "@types/react": "18.0.9",
     "@types/react-dom": "18.0.4",
