--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "prepare": "husky install"
   },
   "dependencies": {
     "next": "12.1.6",
@@ -24,6 +25,8 @@
     "eslint-config-next": "12.1.6",
     "eslint-config-prettier": "^8.5.0",
     "firebase": "^9.8.1",
+    "husky": ">=6",
+    "lint-staged": ">=10",
     "next-i18next": "^11.0.0",
     "next-seo": "^5.4.0",
     "obs-websocket-js": "^5.0.0-beta.1",
