--- a/package.json
+++ b/package.json
@@ -35,6 +35,11 @@
     "react-transition-group": "^4.4.2",
     "react-use": "^17.4.0",
     "sass": "^1.52.1",
+    "stylelint": "^14.8.3",
+    "stylelint-config-prettier": "^9.0.3",
+    "stylelint-config-prettier-scss": "^0.0.1",
+    "stylelint-config-standard": "^25.0.0",
+    "stylelint-config-standard-scss": "^3.0.0",
     "typescript": "4.6.4"
   }
 }
