--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
+    "lint": "yarn lint:next && yarn lint:scss",
+    "lint:next": "next lint",
+    "lint:scss": "stylelint '**/*.scss'",
     "prepare": "husky install"
   },
   "dependencies": {
@@ -41,5 +43,10 @@
     "stylelint-config-standard": "^25.0.0",
     "stylelint-config-standard-scss": "^3.0.0",
     "typescript": "4.6.4"
+  },
+  "nextBundleAnalysis": {
+    "budget": 358400,
+    "budgetPercentIncreaseRed": 20,
+    "showDetails": true
   }
 }
