--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "react-dom": "18.1.0"
   },
   "devDependencies": {
+    "@mdx-js/loader": "^2.1.1",
     "@next/bundle-analyzer": "^12.1.6",
+    "@next/mdx": "^12.1.6",
     "@types/node": "17.0.35",
     "@types/react": "18.0.9",
     "@types/react-dom": "18.0.4",
