--- a/package.json
+++ b/package.json
@@ -24,11 +24,14 @@
     "@types/react": "18.0.9",
     "@types/react-dom": "18.0.4",
     "@types/react-transition-group": "^4.4.4",
+    "@typescript-eslint/eslint-plugin": "^5.27.0",
     "autoprefixer": "^10.4.7",
     "crypto-random-string": "^5.0.0",
     "eslint": "8.16.0",
     "eslint-config-next": "12.1.6",
     "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-unused-imports": "^2.0.0",
     "firebase": "^9.8.1",
     "husky": ">=6",
     "imgur": "^2.2.0",
