--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-dom": "18.1.0"
   },
   "devDependencies": {
+    "@codemirror/lang-javascript": "^0.20.1",
     "@mdx-js/loader": "^2.1.1",
     "@next/bundle-analyzer": "^12.1.6",
     "@next/mdx": "^12.1.6",
@@ -25,6 +26,7 @@
     "@types/react-dom": "18.0.4",
     "@types/react-transition-group": "^4.4.4",
     "@typescript-eslint/eslint-plugin": "^5.27.0",
+    "@uiw/react-codemirror": "^4.7.0",
     "autoprefixer": "^10.4.7",
     "crypto-random-string": "^5.0.0",
     "eslint": "8.16.0",
@@ -42,6 +44,8 @@
     "postcss": "^8.4.14",
     "prettier": "^2.6.2",
     "react-hook-form": "^7.31.2",
+    "react-jsx-parser": "^1.29.0",
+    "react-jsx-renderer": "^1.3.1",
     "react-transition-group": "^4.4.2",
     "react-use": "^17.4.0",
     "sass": "^1.52.1",
@@ -50,7 +54,7 @@
     "stylelint-config-prettier-scss": "^0.0.1",
     "stylelint-config-standard": "^25.0.0",
     "stylelint-config-standard-scss": "^3.0.0",
-    "tailwindcss": "^0.0.0-insiders.50024e4",
+    "tailwindcss": "^0.0.0-insiders.436b543",
     "typescript": "4.6.4"
   },
   "nextBundleAnalysis": {
