--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@next/bundle-analyzer": "^12.1.6",
     "@next/mdx": "^12.1.6",
     "@types/node": "17.0.35",
+    "@types/qrcode": "^1.4.2",
     "@types/react": "18.0.9",
     "@types/react-dom": "18.0.4",
     "@types/react-transition-group": "^4.4.4",
@@ -41,6 +42,7 @@
     "obs-websocket-js": "^5.0.0-beta.1",
     "postcss": "^8.4.14",
     "prettier": "^2.6.2",
+    "qrcode": "^1.5.0",
     "react-hook-form": "^7.31.2",
     "react-transition-group": "^4.4.2",
     "react-use": "^17.4.0",
