--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
     "lint": "yarn lint:next && yarn lint:scss",
     "lint:next": "next lint",
     "lint:scss": "stylelint '**/*.scss'",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "storybook": "start-storybook -p 6006 -s ./public",
+    "build-storybook": "build-storybook -s public",
+    "chromatic": "chromatic"
   },
   "dependencies": {
     "next": "12.1.6",
@@ -17,20 +20,32 @@
     "react-dom": "18.1.0"
   },
   "devDependencies": {
+    "@babel/core": "^7.18.2",
     "@mdx-js/loader": "^2.1.1",
     "@next/bundle-analyzer": "^12.1.6",
     "@next/mdx": "^12.1.6",
+    "@storybook/addon-actions": "^6.5.6",
+    "@storybook/addon-essentials": "^6.5.6",
+    "@storybook/addon-interactions": "^6.5.6",
+    "@storybook/addon-links": "^6.5.6",
+    "@storybook/builder-webpack5": "^6.5.6",
+    "@storybook/manager-webpack5": "^6.5.6",
+    "@storybook/react": "^6.5.6",
+    "@storybook/testing-library": "^0.0.11",
     "@types/node": "17.0.35",
     "@types/react": "18.0.9",
     "@types/react-dom": "18.0.4",
     "@types/react-transition-group": "^4.4.4",
     "@typescript-eslint/eslint-plugin": "^5.27.0",
     "autoprefixer": "^10.4.7",
+    "babel-loader": "^8.2.5",
+    "chromatic": "^6.5.6",
     "crypto-random-string": "^5.0.0",
     "eslint": "8.16.0",
     "eslint-config-next": "12.1.6",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-storybook": "^0.5.12",
     "eslint-plugin-unused-imports": "^2.0.0",
     "firebase": "^9.8.1",
     "husky": ">=6",
@@ -45,6 +60,7 @@
     "react-transition-group": "^4.4.2",
     "react-use": "^17.4.0",
     "sass": "^1.52.1",
+    "storybook-addon-next": "^1.6.6",
     "stylelint": "^14.8.3",
     "stylelint-config-prettier": "^9.0.3",
     "stylelint-config-prettier-scss": "^0.0.1",
