--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -1,9 +1,17 @@
 {
-  "extends": ["stylelint-config-standard-scss", "stylelint-config-prettier-scss"],
+  "extends": ["stylelint-config-standard", "stylelint-config-recess-order", "stylelint-config-prettier"],
+  "plugins": ["stylelint-scss", "stylelint-order"],
+  "customSyntax": "postcss-scss",
   "rules": {
     "selector-class-pattern": null,
     "selector-id-pattern": null,
     "scss/dollar-variable-pattern": null,
-    "scss/at-mixin-pattern": null
+    "scss/at-mixin-pattern": null,
+    "at-rule-no-unknown": null,
+    "scss/at-rule-no-unknown": true,
+    "order/order": [
+      "custom-properties",
+      "declarations"
+    ]
   }
 }
