--- a/package.json
+++ b/package.json
@@ -55,17 +55,21 @@
     "next-seo": "^5.4.0",
     "obs-websocket-js": "^5.0.0-beta.1",
     "postcss": "^8.4.14",
+    "postcss-scss": "^4.0.4",
     "prettier": "^2.6.2",
     "react-hook-form": "^7.31.2",
     "react-transition-group": "^4.4.2",
     "react-use": "^17.4.0",
     "sass": "^1.52.1",
     "storybook-addon-next": "^1.6.6",
-    "stylelint": "^14.8.3",
+    "stylelint": "^14.8.5",
     "stylelint-config-prettier": "^9.0.3",
     "stylelint-config-prettier-scss": "^0.0.1",
+    "stylelint-config-recess-order": "^3.0.0",
     "stylelint-config-standard": "^25.0.0",
     "stylelint-config-standard-scss": "^3.0.0",
+    "stylelint-order": "^5.0.0",
+    "stylelint-scss": "^4.2.0",
     "tailwindcss": "^0.0.0-insiders.50024e4",
     "typescript": "4.6.4"
   },
