--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@types/react-dom": "18.0.4",
     "@types/react-transition-group": "^4.4.4",
     "@typescript-eslint/eslint-plugin": "^5.27.0",
+    "@typescript-eslint/parser": "^5.27.1",
     "autoprefixer": "^10.4.7",
     "babel-loader": "^8.2.5",
     "chromatic": "^6.5.6",
