--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-storybook": "^0.5.12",
+    "eslint-plugin-tailwindcss": "^3.5.2",
     "eslint-plugin-unused-imports": "^2.0.0",
     "firebase": "^9.8.1",
     "husky": ">=6",
@@ -58,6 +59,7 @@
     "postcss": "^8.4.14",
     "postcss-scss": "^4.0.4",
     "prettier": "^2.6.2",
+    "prettier-plugin-tailwindcss": "^0.1.11",
     "react-hook-form": "^7.31.2",
     "react-transition-group": "^4.4.2",
     "react-use": "^17.4.0",
