変更したら常に反映を無効化

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -9,7 +9,8 @@
   ],
   "plugins": [
     "@typescript-eslint",
-    "unused-imports"
+    "unused-imports",
+    "tailwindcss"
   ],
   "rules": {
     "@next/next/no-img-element": "off",
