--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "chromatic": "chromatic"
   },
   "dependencies": {
+    "bulma": "^0.9.4",
     "next": "12.1.6",
     "react": "18.1.0",
     "react-dom": "18.1.0"
@@ -61,6 +62,7 @@
     "prettier": "^2.6.2",
     "prettier-plugin-tailwindcss": "^0.1.11",
     "react-hook-form": "^7.31.2",
+    "react-scroll": "^1.8.7",
     "react-transition-group": "^4.4.2",
     "react-use": "^17.4.0",
     "sass": "^1.52.1",
