--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "eslint-plugin-tailwindcss": "^3.5.2",
     "eslint-plugin-unused-imports": "^2.0.0",
     "firebase": "^9.8.1",
+    "@firebase/database": "0.13.0",
     "husky": ">=6",
     "imgur": "^2.2.0",
     "lint-staged": ">=10",
