npmライブラリのバージョンをロールバック

--- a/package.json
+++ b/package.json
@@ -51,7 +51,6 @@
     "eslint-plugin-tailwindcss": "^3.5.2",
     "eslint-plugin-unused-imports": "^2.0.0",
     "firebase": "^9.8.1",
-    "@firebase/database": "0.13.0",
     "husky": ">=6",
     "imgur": "^2.2.0",
     "lint-staged": ">=10",
@@ -62,7 +61,7 @@
     "postcss-scss": "^4.0.4",
     "prettier": "^2.6.2",
     "prettier-plugin-tailwindcss": "^0.1.11",
-    "react-hook-form": "7.31.3",
+    "react-hook-form": "^7.31.2",
     "react-scroll": "^1.8.7",
     "react-transition-group": "^4.4.2",
     "react-use": "^17.4.0",
