--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -1,6 +1,15 @@
 {
-  "extends": ["stylelint-config-standard", "stylelint-config-recess-order", "stylelint-config-prettier"],
-  "plugins": ["stylelint-scss", "stylelint-order"],
+  "ignoreFiles": [
+    "**/*.tsx"
+  ],
+  "extends": [
+    "stylelint-config-standard",
+    "stylelint-config-recess-order",
+    "stylelint-config-prettier"
+  ],
+  "plugins": [
+    "stylelint-scss"
+  ],
   "customSyntax": "postcss-scss",
   "rules": {
     "selector-class-pattern": null,
@@ -8,10 +17,6 @@
     "scss/dollar-variable-pattern": null,
     "scss/at-mixin-pattern": null,
     "at-rule-no-unknown": null,
-    "scss/at-rule-no-unknown": true,
-    "order/order": [
-      "custom-properties",
-      "declarations"
-    ]
+    "scss/at-rule-no-unknown": true
   }
 }
