--- a/package.json
+++ b/package.json
@@ -58,7 +58,7 @@
     "lint-staged": ">=10",
     "next-i18next": "^11.0.0",
     "next-seo": "^5.4.0",
-    "obs-websocket-js": "^5.0.0-beta.1",
+    "obs-websocket-js": "^5.0.0",
     "postcss": "^8.4.14",
     "postcss-scss": "^4.0.4",
     "prettier": "^2.6.2",
