--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@storybook/testing-library": "^0.0.11",
     "@types/mustache": "^4.2.1",
     "@types/node": "17.0.35",
+    "@types/qrcode": "^1.4.2",
     "@types/react": "18.0.9",
     "@types/react-dom": "18.0.4",
     "@types/react-transition-group": "^4.4.4",
@@ -63,6 +64,7 @@
     "postcss-scss": "^4.0.4",
     "prettier": "^2.6.2",
     "prettier-plugin-tailwindcss": "^0.1.11",
+    "qrcode": "^1.5.1",
     "react-hook-form": "^7.31.2",
     "react-scroll": "^1.8.7",
     "react-transition-group": "^4.4.2",
