--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "bracebracket",
   "version": "0.1.0",
   "private": true,
+  "engines": {
+    "node": "20.9.0"
+  },
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -35,7 +38,7 @@
     "@storybook/react": "^6.5.6",
     "@storybook/testing-library": "^0.0.11",
     "@types/mustache": "^4.2.1",
-    "@types/node": "22.14.0",
+    "@types/node": "17.0.35",
     "@types/react": "18.0.9",
     "@types/react-dom": "18.0.4",
     "@types/react-transition-group": "^4.4.4",
