--- a/.github/workflows/chromatic.yml
+++ b/.github/workflows/chromatic.yml
@@ -14,6 +14,12 @@ jobs:
     # Job steps
     steps:
       - uses: actions/checkout@v1
+      
+      - name: Set up node
+        uses: actions/setup-node@v3
+        with:
+          node-version-file: 'package.json'
+          
       - name: Install dependencies
         run: yarn
         # 👇 Adds Chromatic as a step in the workflow
