fix: Update Node.js version to 22.x for Vercel deployment
- Add engines field in package.json specifying Node.js 22.x
- Create .nvmrc file with Node.js version 22
- Fixes Vercel deployment error requiring Node.js 18.x or higher

--- a/package.json
+++ b/package.json
@@ -84,5 +84,8 @@
     "budget": 358400,
     "budgetPercentIncreaseRed": 20,
     "showDetails": true
+  },
+  "engines": {
+    "node": "22.x"
   }
 }
