--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,8 @@
 
 # testing
 /coverage
+/test-results/
+/playwright-report/
 
 # next.js
 /.next/
@@ -35,3 +37,6 @@ yarn-error.log*
 *.tsbuildinfo
 
 build-storybook.log
+
+# Claude instructions - should not be committed
+CLAUDE.md
