--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "@storybook/manager-webpack5": "^6.5.6",
     "@storybook/react": "^6.5.6",
     "@storybook/testing-library": "^0.0.11",
+    "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^14.6.1",
     "@types/mustache": "^4.2.1",
@@ -53,6 +54,7 @@
     "@typescript-eslint/eslint-plugin": "^5.27.0",
     "@typescript-eslint/parser": "^5.27.1",
     "@vitejs/plugin-react": "^4.5.0",
+    "@vitest/coverage-v8": "^3.1.4",
     "@vitest/ui": "^3.1.4",
     "autoprefixer": "^10.4.7",
     "babel-loader": "^8.2.5",
