chore: .claude/settings.local.jsonをリポジトリから除外
- .gitignoreに.claude/settings.local.jsonを追加
- 既存のファイルをリポジトリから削除
- ローカル設定ファイルの誤コミットを防止

--- a/.gitignore
+++ b/.gitignore
@@ -40,3 +40,6 @@ build-storybook.log
 
 # Claude instructions - should not be committed
 CLAUDE.md
+
+# Claude local settings - should not be committed
+.claude/settings.local.json
