fix: GitHub ActionsのCI/CD問題を修正
- Node.js バージョンをpackage.jsonから読み込むように変更
- actions/upload-artifact@v4に更新 (v2/v3は非推奨)
- actions/checkout@v3に更新 (v2は非推奨)
- dawidd6/action-download-artifact@v3に更新
- Node.js 22.xとの互換性を確保

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -13,7 +13,7 @@ jobs:
       - uses: actions/checkout@v3
       - uses: actions/setup-node@v3
         with:
-          node-version: '18'
+          node-version-file: 'package.json'
       - run: yarn install
       - run: yarn test:unit
       - run: yarn test:coverage
@@ -24,11 +24,11 @@ jobs:
       - uses: actions/checkout@v3
       - uses: actions/setup-node@v3
         with:
-          node-version: '18'
+          node-version-file: 'package.json'
       - run: yarn install
       - run: npx playwright install --with-deps
       - run: yarn test:e2e
-      - uses: actions/upload-artifact@v3
+      - uses: actions/upload-artifact@v4
         if: always()
         with:
           name: playwright-report
