fix: ビルドエラーを修正 - TypeScriptバージョン更新とtest setupの循環参照解決
- TypeScriptを4.6.4から4.9.5にアップデート（@types/babel__traverseの互換性のため）
- test/setup.tsの循環参照エラーを修正
- yarn buildが正常に完了するようになった

--- a/package.json
+++ b/package.json
@@ -94,7 +94,7 @@
     "stylelint-order": "^5.0.0",
     "stylelint-scss": "^4.2.0",
     "tailwindcss": "^0.0.0-insiders.50024e4",
-    "typescript": "4.6.4",
+    "typescript": "^4.9.5",
     "vitest": "^3.1.4"
   },
   "nextBundleAnalysis": {
