--- a/package.json
+++ b/package.json
@@ -17,15 +17,15 @@
   "dependencies": {
     "bulma": "^0.9.4",
     "mustache": "^4.2.0",
-    "next": "12.1.6",
-    "react": "18.1.0",
-    "react-dom": "18.1.0"
+    "next": "^13.0.0",
+    "react": "^18.3.0",
+    "react-dom": "^18.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.18.2",
     "@mdx-js/loader": "^2.1.1",
-    "@next/bundle-analyzer": "^12.1.6",
-    "@next/mdx": "^12.1.6",
+    "@next/bundle-analyzer": "^13.0.0",
+    "@next/mdx": "^13.0.0",
     "@storybook/addon-actions": "^6.5.6",
     "@storybook/addon-essentials": "^6.5.6",
     "@storybook/addon-interactions": "^6.5.6",
@@ -36,8 +36,8 @@
     "@storybook/testing-library": "^0.0.11",
     "@types/mustache": "^4.2.1",
     "@types/node": "17.0.35",
-    "@types/react": "18.0.9",
-    "@types/react-dom": "18.0.4",
+    "@types/react": "^18.3.0",
+    "@types/react-dom": "^18.3.0",
     "@types/react-transition-group": "^4.4.4",
     "@typescript-eslint/eslint-plugin": "^5.62.0",
     "@typescript-eslint/parser": "^5.62.0",
@@ -46,7 +46,7 @@
     "chromatic": "^6.5.6",
     "crypto-random-string": "^5.0.0",
     "eslint": "8.16.0",
-    "eslint-config-next": "12.1.6",
+    "eslint-config-next": "^13.0.0",
     "eslint-config-prettier": "^8.10.0",
     "eslint-plugin-import": "^2.31.0",
     "eslint-plugin-storybook": "^0.5.12",
