--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "react-dom": "^18.3.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.18.2",
+    "@babel/core": "^7.27.4",
     "@mdx-js/loader": "^2.1.1",
     "@next/bundle-analyzer": "^13.0.0",
     "@next/mdx": "^13.0.0",
@@ -42,7 +42,7 @@
     "@typescript-eslint/eslint-plugin": "^5.62.0",
     "@typescript-eslint/parser": "^5.62.0",
     "autoprefixer": "^10.4.7",
-    "babel-loader": "^8.2.5",
+    "babel-loader": "^8.4.1",
     "chromatic": "^6.5.6",
     "crypto-random-string": "^5.0.0",
     "eslint": "8.16.0",
@@ -50,26 +50,26 @@
     "eslint-config-prettier": "^8.10.0",
     "eslint-plugin-import": "^2.31.0",
     "eslint-plugin-storybook": "^0.5.12",
-    "eslint-plugin-tailwindcss": "3.5.2",
+    "eslint-plugin-tailwindcss": "^3.18.0",
     "eslint-plugin-unused-imports": "^2.0.0",
-    "firebase": "^9.8.1",
-    "husky": ">=6",
-    "imgur": "^2.2.0",
-    "lint-staged": ">=10",
-    "next-i18next": "^11.0.0",
-    "next-seo": "^5.4.0",
-    "obs-websocket-js": "^5.0.0-beta.1",
+    "firebase": "^9.23.0",
+    "husky": "^9.1.7",
+    "imgur": "^2.4.3",
+    "lint-staged": "^16.1.0",
+    "next-i18next": "^11.3.0",
+    "next-seo": "^5.15.0",
+    "obs-websocket-js": "^5.0.6",
     "postcss": "^8.4.14",
     "postcss-scss": "^4.0.4",
-    "prettier": "^2.6.2",
-    "prettier-plugin-tailwindcss": "^0.1.11",
+    "prettier": "^2.8.8",
+    "prettier-plugin-tailwindcss": "^0.1.13",
     "react-hook-form": "^7.31.2",
     "react-scroll": "^1.8.7",
     "react-transition-group": "^4.4.2",
     "react-use": "^17.4.0",
     "sass": "^1.52.1",
     "storybook-addon-next": "^1.6.6",
-    "stylelint": "^14.8.5",
+    "stylelint": "^14.16.1",
     "stylelint-config-prettier": "^9.0.3",
     "stylelint-config-prettier-scss": "^0.0.1",
     "stylelint-config-recess-order": "^3.0.0",
@@ -77,7 +77,7 @@
     "stylelint-config-standard-scss": "^3.0.0",
     "stylelint-order": "^5.0.0",
     "stylelint-scss": "^4.2.0",
-    "tailwindcss": "^0.0.0-insiders.50024e4",
+    "tailwindcss": "^3.4.0",
     "typescript": "^5.0.0"
   },
   "nextBundleAnalysis": {
