--- a/package.json
+++ b/package.json
@@ -26,8 +26,8 @@
     "bulma": "^0.9.4",
     "mustache": "^4.2.0",
     "next": "12.1.6",
-    "react": "18.1.0",
-    "react-dom": "18.1.0"
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.18.2",
@@ -50,8 +50,8 @@
     "@testing-library/user-event": "^14.6.1",
     "@types/mustache": "^4.2.1",
     "@types/node": "17.0.35",
-    "@types/react": "18.0.9",
-    "@types/react-dom": "18.0.4",
+    "@types/react": "^19.0.0",
+    "@types/react-dom": "^19.0.0",
     "@types/react-transition-group": "^4.4.4",
     "@typescript-eslint/eslint-plugin": "^5.27.0",
     "@typescript-eslint/parser": "^5.27.1",
@@ -83,7 +83,7 @@
     "postcss-scss": "^4.0.4",
     "prettier": "^2.6.2",
     "prettier-plugin-tailwindcss": "^0.1.11",
-    "react-hook-form": "^7.31.2",
+    "react-hook-form": "^7.55.0",
     "react-scroll": "^1.8.7",
     "react-transition-group": "^4.4.2",
     "react-use": "^17.4.0",
@@ -107,6 +107,6 @@
     "showDetails": true
   },
   "engines": {
-    "node": "22.x"
+    "node": ">=18.x"
   }
 }
