--- a/package.json
+++ b/package.json
@@ -25,15 +25,15 @@
   "dependencies": {
     "bulma": "^0.9.4",
     "mustache": "^4.2.0",
-    "next": "12.1.6",
+    "next": "^15.1.5",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.18.2",
     "@mdx-js/loader": "^2.1.1",
-    "@next/bundle-analyzer": "^12.1.6",
-    "@next/mdx": "^12.1.6",
+    "@next/bundle-analyzer": "^15.1.5",
+    "@next/mdx": "^15.1.5",
     "@playwright/test": "^1.52.0",
     "@storybook/addon-actions": "^6.5.6",
     "@storybook/addon-essentials": "^6.5.6",
@@ -52,9 +52,9 @@
     "@types/node": "17.0.35",
     "@types/react": "^19.0.0",
     "@types/react-dom": "^19.0.0",
-    "@types/react-transition-group": "^4.4.4",
-    "@typescript-eslint/eslint-plugin": "^5.27.0",
-    "@typescript-eslint/parser": "^5.27.1",
+    "@types/react-transition-group": "^4.4.11",
+    "@typescript-eslint/eslint-plugin": "^8.18.0",
+    "@typescript-eslint/parser": "^8.18.0",
     "@vitejs/plugin-react": "^4.5.0",
     "@vitest/coverage-v8": "^3.1.4",
     "@vitest/ui": "^3.1.4",
@@ -62,8 +62,8 @@
     "babel-loader": "^8.2.5",
     "chromatic": "^6.5.6",
     "crypto-random-string": "^5.0.0",
-    "eslint": "8.16.0",
-    "eslint-config-next": "12.1.6",
+    "eslint": "^9.18.0",
+    "eslint-config-next": "^15.1.5",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-storybook": "^0.5.12",
@@ -85,7 +85,7 @@
     "prettier-plugin-tailwindcss": "^0.1.11",
     "react-hook-form": "^7.55.0",
     "react-scroll": "^1.8.7",
-    "react-transition-group": "^4.4.2",
+    "react-transition-group": "^4.4.5",
     "react-use": "^17.4.0",
     "sass": "^1.52.1",
     "storybook-addon-next": "^1.6.6",
